--- a/site-media/css/payment.css
+++ b/site-media/css/payment.css
@@ -4,7 +4,7 @@ html {
   padding: 0;
 }
 body {
-  margin: 20px; 
+  margin: 20px;
   padding: 0;
   border: 1px solid #151;
   -moz-border-radius:15px 15px 0 0;
@@ -85,4 +85,7 @@ tr {
   line-height: 1;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+}
+.inline form {
+  display: inline;
 }
